[gd_scene load_steps=42 format=3 uid="uid://xrb7re40tptl"]

[ext_resource type="Script" uid="uid://cdelosrofapwl" path="res://Assets/Scripts/main.gd" id="1_qplxx"]
[ext_resource type="FontFile" uid="uid://s3cpro36q3tr" path="res://Assets/Fonts/Figtree-VariableFont_wght.ttf" id="2_elf4b"]
[ext_resource type="FontFile" uid="uid://cgoftdaksv4qh" path="res://Assets/Fonts/Micro_5/Micro5-Regular.ttf" id="3_elf4b"]
[ext_resource type="FontFile" uid="uid://bkbj1bcvnwswj" path="res://Assets/Fonts/Jersey_15/Jersey15-Regular.ttf" id="4_guoxd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dm0k"]
bg_color = Color(0.980392, 0.815686, 0.768627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(1, 0.968627, 0.952941, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="FontVariation" id="FontVariation_lquwl"]
base_font = ExtResource("2_elf4b")
variation_opentype = {
2003265652: 700
}

[sub_resource type="FontVariation" id="FontVariation_7mycd"]
base_font = ExtResource("2_elf4b")
variation_opentype = {
2003265652: 500
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efxa6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg77c"]
bg_color = Color(0.901961, 0.698039, 0.729412, 1)

[sub_resource type="FontVariation" id="FontVariation_0xm2m"]
base_font = ExtResource("2_elf4b")
variation_opentype = {
2003265652: 400
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.835387, 0.549669, 0.599293, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(0.917188, 0.891693, 0.902279, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.901961, 0.698039, 0.729412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontVariation" id="FontVariation_h2yge"]
base_font = ExtResource("2_elf4b")
variation_opentype = {
2003265652: 400
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.772549, 0.6, 0.713726, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kek77"]
bg_color = Color(0.917647, 0.890196, 0.901961, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c57u"]
bg_color = Color(0.796839, 0.635855, 0.741333, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontVariation" id="FontVariation_qplxx"]
base_font = ExtResource("2_elf4b")
variation_opentype = {
2003265652: 300
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elf4b"]
bg_color = Color(0.835294, 0.54902, 0.6, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guoxd"]
bg_color = Color(0.835294, 0.54902, 0.6, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvsrt"]
bg_color = Color(0.901961, 0.698039, 0.729412, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="FontVariation" id="FontVariation_elf4b"]
base_font = ExtResource("2_elf4b")
variation_opentype = {
2003265652: 500
}

[sub_resource type="FontVariation" id="FontVariation_guoxd"]
base_font = SubResource("FontVariation_elf4b")
variation_opentype = {
2003265652: 400
}

[sub_resource type="FontVariation" id="FontVariation_rvsrt"]
base_font = ExtResource("3_elf4b")
variation_opentype = {
2003265652: 400
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nacht"]
bg_color = Color(1, 0.968627, 0.952941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acsc0"]
bg_color = Color(0.839095, 0.70421, 0.792034, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8o6k"]
bg_color = Color(0.330434, 0.195666, 0.268791, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4357x"]
bg_color = Color(1, 0.968627, 0.952941, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nacht"]

[sub_resource type="FontVariation" id="FontVariation_acsc0"]
base_font = ExtResource("2_elf4b")
variation_opentype = {
2003265652: 600
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8o6k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uop3n"]
content_margin_left = 8.0
bg_color = Color(0.122252, 0.122252, 0.122252, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontVariation" id="FontVariation_f1jyc"]
base_font = ExtResource("2_elf4b")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1jyc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlji8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttgh6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qkp8"]
bg_color = Color(0.521569, 0.521569, 0.521569, 0)

[sub_resource type="FontVariation" id="FontVariation_nacht"]
base_font = ExtResource("2_elf4b")

[node name="Main" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = -5.0
offset_right = 1170.0
offset_bottom = 642.0
script = ExtResource("1_qplxx")

[node name="BreakTimer" type="Timer" parent="Control"]

[node name="WorkTimer" type="Timer" parent="Control"]
wait_time = 1501.0
one_shot = true

[node name="background" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 651.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7dm0k")
metadata/_edit_lock_ = true

[node name="PomodoroDisplay" type="Control" parent="Control"]
anchors_preset = 0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 64.0

[node name="Panel" type="Panel" parent="Control/PomodoroDisplay"]
layout_mode = 0
offset_left = 63.0
offset_top = 46.0
offset_right = 393.0
offset_bottom = 203.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1bvp3")

[node name="Label" type="RichTextLabel" parent="Control/PomodoroDisplay"]
layout_mode = 0
offset_left = 65.0
offset_top = 53.0
offset_right = 391.0
offset_bottom = 112.0
theme_override_colors/default_color = Color(0.111197, 0.111197, 0.111197, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_lquwl")
theme_override_font_sizes/normal_font_size = 32
text = "Pomodoro"
horizontal_alignment = 1

[node name="Time" type="RichTextLabel" parent="Control/PomodoroDisplay"]
layout_mode = 0
offset_left = 62.0
offset_top = 101.0
offset_right = 394.0
offset_bottom = 141.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_7mycd")
theme_override_font_sizes/normal_font_size = 32
text = "00:00"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/PomodoroDisplay"]
modulate = Color(1, 1, 1, 0.654902)
layout_mode = 0
offset_left = 63.0
offset_top = 166.0
offset_right = 393.0
offset_bottom = 187.0
theme_override_styles/background = SubResource("StyleBoxFlat_efxa6")
theme_override_styles/fill = SubResource("StyleBoxFlat_dg77c")
value = 100.0
show_percentage = false

[node name="TimerButtons" type="VBoxContainer" parent="Control"]
modulate = Color(1, 1, 1, 0.690196)
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 420.0
offset_top = 123.0
offset_right = 610.0
offset_bottom = 227.0

[node name="StartButton" type="Button" parent="Control/TimerButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0687983, 0.0687983, 0.0687983, 1)
theme_override_fonts/font = SubResource("FontVariation_0xm2m")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/hover = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/normal = SubResource("StyleBoxFlat_h2yge")
text = "Start"
metadata/_edit_lock_ = true

[node name="PauseButton" type="Button" parent="Control/TimerButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
theme_override_fonts/font = SubResource("FontVariation_h2yge")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxFlat_272bh")
theme_override_styles/hover = SubResource("StyleBoxFlat_5vw27")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kek77")
theme_override_styles/normal = SubResource("StyleBoxFlat_4c57u")
text = "Pause"
metadata/_edit_lock_ = true

[node name="Settings" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 64.0
offset_top = 285.0
offset_right = 104.0
offset_bottom = 325.0

[node name="SettingsBG" type="Panel" parent="Control/Settings"]
layout_mode = 0
offset_left = -1.0
offset_top = -15.0
offset_right = 452.0
offset_bottom = 329.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1bvp3")
metadata/_edit_lock_ = true

[node name="SettingsLabel" type="RichTextLabel" parent="Control/Settings"]
layout_mode = 0
offset_right = 450.0
offset_bottom = 59.0
theme_override_colors/default_color = Color(0.111197, 0.111197, 0.111197, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_lquwl")
theme_override_font_sizes/normal_font_size = 32
text = "Pomodoro Settings"
horizontal_alignment = 1

[node name="TimeEntry" type="CenterContainer" parent="Control/Settings"]
layout_mode = 0
offset_left = -2.0
offset_top = 79.0
offset_right = 454.0
offset_bottom = 126.0

[node name="LineEdit" type="LineEdit" parent="Control/Settings/TimeEntry"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_colors/selection_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(0.0475577, 0.0475576, 0.0475576, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_qplxx")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_elf4b")
theme_override_styles/read_only = SubResource("StyleBoxFlat_guoxd")
theme_override_styles/normal = SubResource("StyleBoxFlat_rvsrt")
placeholder_text = "(Default: 25)"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false

[node name="TimeLabel" type="CenterContainer" parent="Control/Settings"]
layout_mode = 0
offset_left = -1.0
offset_top = 59.0
offset_right = 454.0
offset_bottom = 81.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Settings/TimeLabel"]
custom_minimum_size = Vector2(170, 20)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_guoxd")
text = "Work Time (in minutes)"

[node name="BreakEntry" type="CenterContainer" parent="Control/Settings"]
layout_mode = 0
offset_left = -2.0
offset_top = 161.645
offset_right = 454.0
offset_bottom = 208.645

[node name="LineEdit" type="LineEdit" parent="Control/Settings/BreakEntry"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_colors/selection_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(0.0475577, 0.0475576, 0.0475576, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_qplxx")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_elf4b")
theme_override_styles/read_only = SubResource("StyleBoxFlat_guoxd")
theme_override_styles/normal = SubResource("StyleBoxFlat_rvsrt")
placeholder_text = "(Default: 10)"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false

[node name="BreakLabel" type="CenterContainer" parent="Control/Settings"]
layout_mode = 0
offset_left = -1.0
offset_top = 142.0
offset_right = 454.0
offset_bottom = 164.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Settings/BreakLabel"]
custom_minimum_size = Vector2(170, 20)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_guoxd")
text = "Break Time (in minutes)"

[node name="Level" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control/Level"]
layout_mode = 0
offset_left = 167.0
offset_right = 1158.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.329412, 0.196078, 0.270588, 1)
theme_override_fonts/font = SubResource("FontVariation_rvsrt")
theme_override_font_sizes/font_size = 31
theme_override_styles/background = SubResource("StyleBoxFlat_nacht")
theme_override_styles/fill = SubResource("StyleBoxFlat_acsc0")
max_value = 3800.0

[node name="Panel" type="Panel" parent="Control/Level"]
layout_mode = 0
offset_right = 167.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f8o6k")

[node name="lvlLabel" type="RichTextLabel" parent="Control/Level/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 167.0
offset_bottom = 27.0
theme_override_fonts/normal_font = ExtResource("4_guoxd")
theme_override_font_sizes/normal_font_size = 21
text = "Level: 1"

[node name="coinslabel" type="RichTextLabel" parent="Control/Level/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 167.0
offset_bottom = 48.0
theme_override_fonts/normal_font = ExtResource("4_guoxd")
theme_override_font_sizes/normal_font_size = 21
text = "Coins: 0"

[node name="To-Do" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control/To-Do"]
layout_mode = 0
offset_left = 688.0
offset_top = 266.0
offset_right = 1042.0
offset_bottom = 618.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4357x")

[node name="ToDoLabel" type="RichTextLabel" parent="Control/To-Do"]
layout_mode = 0
offset_left = 688.0
offset_top = 279.0
offset_right = 1043.0
offset_bottom = 338.0
theme_override_colors/default_color = Color(0.111197, 0.111197, 0.111197, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_lquwl")
theme_override_font_sizes/normal_font_size = 32
text = "To-Do list"
horizontal_alignment = 1

[node name="TaskList" type="VBoxContainer" parent="Control/To-Do"]
layout_mode = 0
offset_left = 701.0
offset_top = 321.0
offset_right = 1034.0
offset_bottom = 606.0

[node name="addTask" type="PanelContainer" parent="Control/To-Do/TaskList"]
custom_minimum_size = Vector2(333, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nacht")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/To-Do/TaskList/addTask"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Control/To-Do/TaskList/addTask/HBoxContainer"]
custom_minimum_size = Vector2(212, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_acsc0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f8o6k")
theme_override_styles/normal = SubResource("StyleBoxFlat_uop3n")

[node name="spacer" type="Control" parent="Control/To-Do/TaskList/addTask/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="submit" type="Button" parent="Control/To-Do/TaskList/addTask/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.876154, 0.477079, 0.692234, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_f1jyc")
theme_override_styles/focus = SubResource("StyleBoxFlat_f1jyc")
theme_override_styles/hover = SubResource("StyleBoxFlat_vlji8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ttgh6")
theme_override_styles/normal = SubResource("StyleBoxFlat_4qkp8")
text = "Add new task"

[node name="spacer" type="Control" parent="Control/To-Do/TaskList"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="tip" type="RichTextLabel" parent="Control/To-Do"]
layout_mode = 0
offset_left = 692.0
offset_top = 232.0
offset_right = 1039.0
offset_bottom = 272.0
theme_override_fonts/normal_font = SubResource("FontVariation_nacht")
theme_override_font_sizes/normal_font_size = 13
text = "Tip: Make sure to split your to-do list into simple, easily achievable tasks :>"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[connection signal="timeout" from="Control/WorkTimer" to="Control" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Control/TimerButtons/StartButton" to="Control" method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/TimerButtons/StartButton" to="Control" method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="Control/TimerButtons/StartButton" to="Control" method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/TimerButtons/PauseButton" to="Control" method="_on_pause_button_pressed"]
[connection signal="pressed" from="Control/To-Do/TaskList/addTask/HBoxContainer/submit" to="Control" method="_on_submit_pressed"]
